Corrected header overflow

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
     min-height: 100%; 
     display: flex;
     flex-direction: column;
-    padding: 0;
+    padding: 0px;
 }
 
 body {
@@ -12,13 +12,14 @@ body {
     justify-content: space-between;
     flex-direction: column;
     margin: 0px;
+    overflow: clip;
 }
 
 .header{
     background-color: #d74e13b6;
-    width: 100%;
     text-align: center;
     padding: 8px;
+    width: 100%;
 }
 .frame{
     display: flex;
@@ -162,10 +163,13 @@ body {
     background-color: #d74e13b6;
     width: 100%;
     justify-content: center;
+    padding:0px;
+    margin: 0px;
 }
 
 .gitHubLogo {
-    margin-left: 10px;
+    margin: 5px;
+    height: 36px;
 }
 .boldText{
     font-weight: bold;
